# object-storage

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: config.py  main.py
app/api/: deps.py  routes.py
app/service/: crud.py  db.py  models.py
app/utils/: file_utils.py  image_utils.py  web_utils.py
